force-app/main/default/objects/Edition_Popup__c/Edition_Popup__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Child object of Edition. Used to define the Popup properties for a particular Event.</description>
    <label>Edition Popup</label>
    <nameField>
        <displayFormat>EPN-{00000}</displayFormat>
        <label>Edition Popup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edition Popups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>