force-app/main/default/objects/Edition_Popup__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Each Edition can have many Edition Popups. This field helps to select the related Edition for a Pop up.</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Edition Popups</relationshipLabel>
    <relationshipName>Edition_Popups</relationshipName>
    <type>Lookup</type>
</CustomField>