force-app/main/default/objects/Edition_Popup__c/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field helps to control the pop up visibility for the community user by operations admin.</description>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>