force-app/main/default/objects/Edition_Popup__c/fields/Pop_Up_Text__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Text__c</fullName>
    <description>This is a rich text area field to store the pop up text to be displayed on pop up on community portal.</description>
    <label>Pop Up Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>