force-app/main/default/objects/Edition_Popup__c/fields/Reset_Pop_up_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Reset_Pop_up_Preferences__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To reset the pop up preferences set by a user when there are any changes done in popup by operations admin.</description>
    <inlineHelpText>To reset the pop up preferences set by a user when there are any changes done in popup by operations admin.</inlineHelpText>
    <label>Reset Pop up Preferences</label>
    <type>Checkbox</type>
</CustomField>