force-app/main/default/objects/Edition_Popup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Edition__c</columns>
    <columns>Booth_Product_Type__c</columns>
    <columns>Is_Visible__c</columns>
    <columns>Reset_Pop_up_Preferences__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>